<?xml version="1.0" encoding="UTF-8"?>

<!--
  Copyright (C) 2021, 2023, Yasumasa Suenaga

  This program is free software; you can redistribute it and/or
  modify it under the terms of the GNU General Public License
  as published by the Free Software Foundation; either version 2
  of the License, or (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program; if not, write to the Free Software
  Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
  MA 02110-1301, USA.
-->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.yasuenag</groupId>
    <artifactId>cfa</artifactId>
    <version>0.3.2</version>
    <name>CFA</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <imageName>${project.artifactId}-${project.version}</imageName>
        <buildYear>${maven.build.timestamp}</buildYear>
        <maven.build.timestamp.format>yyyy</maven.build.timestamp.format>
        <maven.compiler.source>16</maven.compiler.source>
        <maven.compiler.target>16</maven.compiler.target>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <compilerArgs>
                        <arg>-Xlint:all</arg>
                        <arg>--add-exports=jdk.jdeps/com.sun.tools.classfile=cfa</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <id>jlink</id>
                        <phase>package</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>${java.home}/bin/jlink</executable>
                            <arguments>
                                <argument>--module-path</argument>
                                <argument>${project.build.outputDirectory}</argument>
                                <argument>--add-modules</argument>
                                <argument>cfa</argument>
                                <argument>--add-options</argument>
                                <!--
                                    add-option does not accept argument which stats with '\-\-',
                                    so HeapDumpOnOutOfMemoryError is added to the top of args to avoid it.
                                -->
                                <argument>-XX:+HeapDumpOnOutOfMemoryError --add-exports=jdk.jdeps/com.sun.tools.classfile=cfa</argument>
                                <argument>--launcher</argument>
                                <argument>${project.artifactId}=cfa/com.yasuenag.cfa.Main</argument>
                                <argument>--output</argument>
                                <argument>${project.build.directory}/${imageName}</argument>
                                <argument>--compress</argument>
                                <argument>2</argument>
                                <argument>--no-header-files</argument>
                                <argument>--no-man-pages</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <descriptors>
                        <descriptor>src/main/assembly/distribution.xml</descriptor>
                    </descriptors>
                    <attach>false</attach>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <profiles>
        <profile>
            <id>linux</id>
            <activation>
                <os>
                    <name>Linux</name>
                </os>
            </activation>
            <properties>
                <package.os.name>linux</package.os.name>
            </properties>
        </profile>
        <profile>
            <id>windows</id>
            <activation>
                <os>
                    <family>windows</family>
                </os>
            </activation>
            <properties>
                <package.os.name>windows</package.os.name>
            </properties>
        </profile>
        <profile>
            <id>mac</id>
            <activation>
                <os>
                    <family>mac</family>
                </os>
            </activation>
            <properties>
                <package.os.name>mac</package.os.name>
            </properties>
        </profile>
    </profiles>
</project>
